--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "othello"
+name = "_othello"
 
 crate-type = ["cdylib", "rlib"]
-# crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.22.2", features = ["extension-module"] }
