--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,15 @@ managed = true
 dev-dependencies = [
     "ruff>=0.6.2",
     "pip>=24.2",
-    "maturin>=1,<2"
+    "maturin>=1,<2",
+    "tqdm>=4.66.5",
 ]
+
+[tool.maturin]
+python-source = "python"
+module-name = "othello._othello"
+bindings = 'pyo3'
+features = ["pyo3/extension-module"]
+
+[project.scripts]
+othello-ui = "othello.ui:main"
